css/style.css
/* LOGIN PAGE*/
img.bg
{
      /* Set rules to fill background */
      min-height: 100%;
      min-width: 1024px;
      
      /* Set up proportionate scaling */
      width: auto;
      height: 100%;
      
      /* Set up positioning */
      position: fixed;
      top: 0;
      left: 0;

      z-index: -1;
}

.login
{
  background-color: #3c763d; color: white; font-family: Quicksand;
}

.clear-fix
{
  opacity: 0.8; margin-bottom: 0;
}

.login-text
{
  font-size: 20px;
}

.login-button
{

}
/*==================*/


/* NAVIGATION BAR */
.menubar
{
  background-color: #2b823A;
  height: 100px;
}
.center-block
{
  height: 40px !important;
  width: 40px !important;
}
.center-image
{
  height: 100px !important;
  width: 100px !important;
}

/* THIS CENTERS THE NAVBAR ELEMENTS */
@media (min-width: 768) {
.navibar .col-md-1,
  .navibar .col-sm-1,
  .navibar .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
    padding-top: 15px;
  }
}

@media (min-width: 992px) {
.navibar .col-md-1,
  .navibar .col-sm-1,
  .navibar .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
    padding-top: 15px;
  }
}

@media (min-width: 1200px) {
.navibar .col-md-1,
  .navibar .col-sm-1,
  .navibar .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
    padding-top: 15px;
  }
}
/*==================*/


/* DROPDOWN MENU */
.flipdown
{
  overflow: hidden;
}

.flipdown .flipbtn
{
    font-size: 16px;    
    border: none;
    outline: none;
    color: black;
    background-color: inherit;
}

.navibutton:hover
{
  background-color: #10621e;
}

.navibutton a:hover
{
  text-decoration: none;
  color: white;
}
/*==================*/


/* DROPDOWN CONTENTS */
.flipdown-menu
{
    display: none;
    background-color: #fff;
    position: absolute;
    left:0px;
    min-width: 183px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 100;
}

.flipdown-menu a
{
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    width: inherit;
    text-align: left;
    font-family: QuickSandMed !important;
}

.flipdown-menu a:hover
{
      background-color: #10621e;
      color:white;
}

.flipdown:hover .flipdown-menu
{
  display:block;
}

.sub-flipdown-menu {
  display: none;
}

.sub-flipdown:hover .sub-flipdown-menu {
  left: 100%;
  top: initial;
  position: absolute;
  display: block;
  background-color: #fff;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.sub-flipdown-menu:hover {
  background-color: white !important;
  color: black !important;
}


/*--------------------------------*/
@keyframes bounce
{
    1%{bottom:0;}
    20%  {bottom:-3px;}
    50%  {bottom:0px;}
    70%  {bottom:0px;}
    100% {bottom:0px;}
}
.navibutton:hover
{ 
  transition: 1s; 
  animation-name: bounce;
  animation-duration: 1s;
}
/*--------------------------------*/

.btn_loginSubmit:hover
{
background-color:#426D6D !important;
border-color: #1A4848 !important;
}
h1
{
  font-size: 4vw !important;
}
h2
{
  margin: 0px;
}
h6
{
  font-family: Quicksand;
  font-size: 1.5em !important;
  color: white;
}
.jumbotron
{
  background-color: transparent;
}

/* SITES */
body
{
  text-align: center;
  height:100% !important;
}
/* TODO: Change cards to have simpler CSS3 effects */
.card {
  background: #2b823A;
  opacity: 0.9;
  border-radius: 2px;
  margin-right: 5em;
  margin-bottom: 1em;
  color:white;
}
.card-1 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.card-1:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}
.sitebox a
{
  color: white !important;
  text-decoration: none !important;
}
.sitebox
{
  background-color: forestgreen;
  border-width: 1px;
  border-color: #d6e9c6;
  border-style: solid;
  border-radius: 5px;
  margin: 2px;
  padding: 5px;
  height: 72px;
  width: 143px;
  float: left;
}

/*==================*/


/* Quick Fixes */
.wrapper
{
  padding: 10% 30% 0% ;
}
.pull-down
{
  margin-top: 2em;
}
.pull-down-more
{
  margin-top: 4em;
}
.pull-down-even-more
{
  margin-top: 8em;
}
.pull-up
{
  margin-bottom: 2em;
}
.overflow {
overflow: auto;
}
.fixed-width {
  width: 300px !important;
}


/*==================*/


/* CUSTOM FONTS */
@font-face {
    font-family: 'Quicksand';
    src: url('../fonts/Quicksand-Light.ttf');
    font-style: normal;
    font-weight: normal;
    text-rendering: optimizeLegibility;
}
@font-face {
    font-family: 'QuicksandMed';
    src: url('../fonts/Quicksand-Medium.ttf');
    text-rendering: optimizeLegibility;
}
@font-face {
    font-family: 'QuicksandBold';
    src: url('../fonts/Quicksand-Bold.ttf');
    text-rendering: optimizeLegibility;
}
/*==================*/


/* OTHERS */

.search-results-table {
  margin-top: 15px !important;
  margin-left: 89px;
}

.reports-table {
  margin-left: -35px;
}

.checkbox
{
  margin-top: 0px !important;
}
hr
{
  margin-top: 5px;
  margin-bottom:10px;
}
.header1
{
  position:absolute;
  float:left;
  bottom-padding:100px;
}
.header2
{
  position:absolute;
  float:right;
  bottom-padding:100px;
}
#checkboxes {
  display: none;
  border: 1px #dadada solid;
}

#checkboxes label {
  display: block;
}
#checkboxes label:hover {
  background-color: #1e90ff;
}
.overSelect {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}
.selectBox {
  position: relative;
}

.selectBox select {
  width: 100%;
  font-weight: bold;
}
.autofit
{
  font-size:auto !important;
}
.smalltext
{
  white-space: nowrap;
}
.fixedWidth
{
  width: 120px !important;
}

/* Loans Page */
.searchresults 
{
  background-color: white;
  z-index:100;
  position:relative;
  width:458px;
  margin-left:263px;
}

.searchresults:hover
{
  background-color: lightblue;
}

.searchresults a:hover
{
  text-decoration: none;
  color: black;
}

#search_result
{
  position:absolute;
  margin-top: -3.3em;
}

/* Options page */
.sitelist
{
  overflow: scroll;
  background-color: white;
  height: 200px;
  width: 230px;
  border: solid 1px #ddd;
}

.alignlist
{
  margin-left: 15px;
  margin-top:10px;
}

.accountlist
{
  overflow: scroll;
  background-color: white;
  height: 100px;
  width: 190px;
  border: solid 1px black;
}

.moveabit
{
  margin-left: 10px;
}

.mediumtext
{
  font-family: QuicksandMed !important;
}


/* Site movement page */
.flipicon
{
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -o-transform: rotate(270deg);
  transform: rotate(270deg);
}

.whitelink
{
  text-decoration:none;
  color:white;
}

.whitelink:hover
{
  color:orange;
  text-decoration: none;
}

.moveright
{
  margin-right: 15px;
}

.disabletotally
{
  pointer-events: none;
  opacity: 0.4;
}

.nopadding
{
 padding:0px !important;
}

.marginbottom
{
  margin-bottom:30px;
}

.margin-separator
{
  margin-bottom: 10px;
}

.block
{
  display:block;
}

.btn-cornflowerblue {
  background-color: cornflowerblue;
  color:white;
}

/* Search field for reports page*/
.report-search {

    top: 6em;
    width: fit-content;
    z-index: 1000;
    background-color: white;
    border-left-style: solid;
    border-left-color: #ddd;
    border-left-width: 1px;
    border-right-style: solid;
    border-right-color: #ddd;
    border-right-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #ddd;
    border-bottom-width: 1px;
}

.report-search div:hover
{
  background-color: lightblue;
}

.report-search div a:hover
{
  text-decoration: none;
  color: black;
}

/* Vertically align in the middle */
.table > tbody > tr > td {
  vertical-align: middle;
}

